--- a/index.css
+++ b/index.css
@@ -2,3 +2,64 @@ body {
   font-family: sans-serif;
   text-align: center;
 }
+
+table {
+  /*Do display later*/
+}
+
+#table {
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+td {
+  width: 50px;
+  height: 50px;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  text-align: center;
+}
+
+.myButton {
+	-moz-box-shadow: 0px 10px 14px -7px red;
+	-webkit-box-shadow: 0px 10px 14px -7px red;
+	box-shadow: 0px 10px 14px -7px red;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, red), color-stop(1, red));
+	background:-moz-linear-gradient(top, red 5%, red 100%);
+	background:-webkit-linear-gradient(top, red 5%, red 100%);
+	background:-o-linear-gradient(top, red 5%, red 100%);
+	background:-ms-linear-gradient(top, red 5%, red 100%);
+	background:linear-gradient(to bottom, red 5%, red 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='red', endColorstr='red',GradientType=0);
+	background-color:red;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	border:1px solid red;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:18px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px red;
+  margin-bottom: 2%;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, red), color-stop(1, red));
+	background:-moz-linear-gradient(top, red 5%, red 100%);
+	background:-webkit-linear-gradient(top, red 5%, red 100%);
+	background:-o-linear-gradient(top, red 5%, red 100%);
+	background:-ms-linear-gradient(top, red 5%, red 100%);
+	background:linear-gradient(to bottom, red 5%, red 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='red', endColorstr='red',GradientType=0);
+	background-color:red;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
