--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ table {
   justify-content: center;
 }
 
+#cell {
+  background-color: white;
+}
+
 td {
   width: 50px;
   height: 50px;
@@ -62,4 +66,9 @@ td {
 .myButton:active {
 	position:relative;
 	top:1px;
+}
+
+select {
+  width: 100px;
+  height: 40px;
 }
