--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
 body {
   font-family: sans-serif;
   text-align: center;
+  background-image: linear-gradient(grey, white);
+  margin-top: 2%;
 }
 
-table {
-  /*Do display later*/
+h1 {
+  text-align: center;
+  display: block;
 }
 
 #table {
@@ -18,8 +21,8 @@ table {
 }
 
 td {
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-style: solid;
   border-color: black;
   border-width: 1px;
